Adding  open api to inventory service
